--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -46,6 +46,7 @@
 	@media screen and (min-width: $tablet) {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
+		justify-items: center;
 	}
 
 	@media screen and (min-width: $desktop) {
@@ -71,8 +72,11 @@
 
 	@media screen and (min-width: $tablet) {
 		position: relative;
-		margin-left: 60px;
 		margin-bottom: 40px;
+	}
+
+	@media screen and (min-width: $desktop) {
+		margin-left: 60px;
 	}
 
 	&:hover,
