--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -60,6 +60,7 @@
 
 .help-animals__button {
 	color: $main-blue;
+	text-align: center;
 	background-color: $yellow;
 	width: 311px;
 	position: absolute;
