--- a/src/styles/template-parts-styles/need-help.scss
+++ b/src/styles/template-parts-styles/need-help.scss
@@ -47,7 +47,10 @@
 }
 
 .need-help__button {
-	width: 280px;
+	display: flex;
+	margin: 0 auto;
+	align-items: center;
+	justify-content: center;
 	color: $main-blue;
 	background-color: $yellow;
 
