--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -59,6 +59,10 @@
 }
 
 .help-animals__button {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	margin: 0 auto;
 	color: $main-blue;
 	text-align: center;
 	background-color: $yellow;
