--- a/src/styles/template-styles/about.scss
+++ b/src/styles/template-styles/about.scss
@@ -217,7 +217,10 @@
 }
 
 .support__btn {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+	margin: 0 auto;
   text-align: center;
   font-size: 20px;
   cursor: pointer;
@@ -241,7 +244,6 @@
     }
 
   @media screen and (min-width: $desktop) {
-    display: block;
     font-size: 24px;
     width: 297px;
     margin: 31px 0px 14px 0px;
