--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -12,16 +12,22 @@
   }
 }
 
+.helpform__section .container {
+  @media screen and (max-width: 767.98px) {
+    padding: 0;
+  }
+}
+
 .internal__wrap {
   @media screen and (min-width: $tablet) {
-    padding: 40px 116px 36px;
+    padding: 40px 116px 16px;
     background-color: $bg-footer;
     border-radius: 16px;
     margin-bottom: 72px;
   }
   @media screen and (min-width: $desktop) {
     border-radius: 0;
-    padding: 56px 220px 48px;
+    padding: 56px 220px 32px;
     margin-bottom: 100px;
   }
 }
@@ -44,7 +50,7 @@
 }
 
 //helpform grid
-.helpform form {
+.helpform .form__wrapper {
   @media screen and (min-width: $desktop) {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -53,8 +59,7 @@
   }
 }
 
-.contact-needs,
-.check__wrap {
+.contact-needs {
   grid-column-end: span 2;
 }
 
@@ -105,13 +110,13 @@ textarea.contact__input {
   font-size: 12px;
   font-weight: 300;
   line-height: 1;
-  margin: 16px 0 32px;
+  margin-top: 16px;
   @media screen and (min-width: $tablet) {
     margin: 18px 0 33px;
     font-size: 14px;
   }
   @media screen and (min-width: $desktop) {
-    margin: -10px 0 10px;
+    margin: 20px 0 40px;
     font-size: 16px;
   }
 }
@@ -161,7 +166,6 @@ textarea.contact__input {
   margin-top: 32px;
   @media screen and (min-width: $desktop) {
     margin-top: 0;
-    grid-column-end: span 2;
   }
 }
 
