--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -25,7 +25,7 @@
     border-radius: 16px;
     margin-bottom: 72px;
   }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desktop) {
     border-radius: 0;
     padding: 56px 220px 32px;
     margin-bottom: 100px;
@@ -102,6 +102,13 @@ textarea.contact__input {
 
 textarea.contact__input {
   resize: none;
+}
+
+input.contact__input::placeholder,
+textarea.contact__input::placeholder {
+  color: $grey;
+  font-size: 14px;
+  line-height: 1;
 }
 
 // check button
