--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -25,9 +25,14 @@
     border-radius: 16px;
     margin-bottom: 72px;
   }
+  @media screen and (min-width: 1200px) {
+    padding-top: 56px;
+    padding-bottom: 32px;
+  }
   @media screen and (min-width: $desktop) {
     border-radius: 0;
-    padding: 56px 220px 32px;
+    padding-right: 220px;
+    padding-left: 220px;
     margin-bottom: 100px;
   }
 }
