--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,78 +1,79 @@
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-	/* 1. Correct the line height in all browsers. */
-	-webkit-text-size-adjust: 100%;
-	/* 2. Prevent adjustments of font size after orientation changes in iOS. */
-	-moz-tab-size: 4;
-	/* 3. Use a more readable tab size (opinionated). */
-	tab-size: 4;
-	/* 3 */
+  /* 1. Correct the line height in all browsers. */
+  -webkit-text-size-adjust: 100%;
+  /* 2. Prevent adjustments of font size after orientation changes in iOS. */
+  -moz-tab-size: 4;
+  /* 3. Use a more readable tab size (opinionated). */
+  tab-size: 4;
+  /* 3 */
 }
 
 html,
 body {
-	scroll-behavior: smooth;
-	overflow-x: hidden;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-	margin: 0;
+  margin: 0;
 
-	&.modal-open {
-		overflow: hidden;
-	}
+  &.modal-open {
+    max-height: 100vh;
+    overflow: hidden;
+  }
 
-	&::-webkit-scrollbar {
-		width: 8px;
-	}
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
 
-	&::-webkit-scrollbar-thumb {
-		background-color: $grey;
-		border-radius: 4px;
-	}
+  &::-webkit-scrollbar-thumb {
+    background-color: $grey;
+    border-radius: 4px;
+  }
 
-	&::-webkit-scrollbar-thumb:hover {
-		background-color: $main-blue;
-	}
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: $main-blue;
+  }
 }
 
 hr {
-	height: 0;
-	/* 1 */
-	color: inherit;
-	/* 2 */
+  height: 0;
+  /* 1 */
+  color: inherit;
+  /* 2 */
 }
 
 abbr[title] {
-	text-decoration: underline dotted;
+  text-decoration: underline dotted;
 }
 
 sub,
 sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-	bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-	top: -0.5em;
+  top: -0.5em;
 }
 
 table {
-	text-indent: 0;
-	/* 1 */
-	border-color: inherit;
-	/* 2 */
+  text-indent: 0;
+  /* 1 */
+  border-color: inherit;
+  /* 2 */
 }
 
 button,
@@ -80,80 +81,80 @@ input,
 optgroup,
 select,
 textarea {
-	font-family: inherit;
-	/* 1 */
-	font-size: 100%;
-	/* 1 */
-	line-height: 1.15;
-	/* 1 */
-	margin: 0;
-	/* 2 */
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
 }
 
 button,
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-	-webkit-appearance: button;
+  -webkit-appearance: button;
 }
 
 ::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
+  border-style: none;
+  padding: 0;
 }
 
 :-moz-focusring {
-	outline: 1px dotted ButtonText;
+  outline: 1px dotted ButtonText;
 }
 
 :-moz-ui-invalid {
-	box-shadow: none;
+  box-shadow: none;
 }
 
 legend {
-	padding: 0;
+  padding: 0;
 }
 
 progress {
-	vertical-align: baseline;
+  vertical-align: baseline;
 }
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
-	height: auto;
+  height: auto;
 }
 
 [type="search"] {
-	-webkit-appearance: textfield;
-	/* 1 */
-	outline-offset: -2px;
-	/* 2 */
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
 }
 
 ::-webkit-search-decoration {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 ::-webkit-file-upload-button {
-	-webkit-appearance: button;
-	/* 1 */
-	font: inherit;
-	/* 2 */
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
 }
 
 summary {
-	display: list-item;
+  display: list-item;
 }
 
 * {
-	padding: 0px;
-	margin: 0px;
-	border: none;
+  padding: 0px;
+  margin: 0px;
+  border: none;
 }
 
 body,
@@ -162,24 +163,24 @@ input,
 select,
 optgroup,
 textarea {
-	color: $black;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-		"Helvetica Neue", sans-serif;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 1.35;
+  color: $black;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.35;
 }
 
 img {
-	display: block;
-	height: auto;
-	width: 100%;
+  display: block;
+  height: auto;
+  width: 100%;
 }
 
 a {
-	text-decoration: none;
-	font: inherit;
-	color: inherit;
+  text-decoration: none;
+  font: inherit;
+  color: inherit;
 }
 
 h1,
@@ -189,26 +190,26 @@ h4,
 h5,
 h6,
 p {
-	font: inherit;
+  font: inherit;
 }
 
 ul,
 ol {
-	list-style: none;
+  list-style: none;
 }
 
 input,
 button,
 textarea,
 select {
-	color: inherit;
-	font: inherit;
-	cursor: pointer;
-	outline: none;
-	border: none;
-	background: transparent;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background: transparent;
 }
 
 .wrapper {
-	overflow: hidden;
+  overflow: hidden;
 }
