--- a/src/styles/template-styles/about.scss
+++ b/src/styles/template-styles/about.scss
@@ -226,8 +226,6 @@
   cursor: pointer;
   margin: 25px auto 0px auto;
   grid-area: support__btn;
-  min-width: 311px;
-  width: fit-content;
   padding: 14px 32px;
   
 	&:hover,
@@ -235,6 +233,10 @@
 		color: $main-blue;
 		background-color: $white;
 	}
+
+  @media screen and (min-width: $mobile) {
+    min-width: 311px;
+  }
 
   @media screen and (min-width: $tablet) {
     font-size: 16px;
