--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -56,6 +56,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
+    overflow: auto;
     transform: translateX(100%);
     transition: $transition-function;
   }
@@ -79,11 +80,11 @@
   width: 100%;
   padding: 24px 16px 32px;
   background: $white;
-  border-top: 1px solid $main-blue;
-  border-bottom: 1px solid $main-blue;
 
   @media screen and (min-width: $mobile) and (max-width: 767.98px) {
     left: 0;
+    border-top: 1px solid $main-blue;
+    border-bottom: 1px solid $main-blue;
   }
 
   @media screen and (min-width: $tablet) and (max-width: 1199.98px) {
