add width fit-content on button help-animals

--- a/src/styles/template-parts-styles/need-help-animals.scss
+++ b/src/styles/template-parts-styles/need-help-animals.scss
@@ -74,6 +74,7 @@
 	font-style: normal;
 	font-weight: 500;
 	min-width: 286px;
+	width: fit-content;
 	padding: 14px 32px;
 		
 	@media screen and (min-width: $tablet) {
