--- a/src/styles/template-styles/about.scss
+++ b/src/styles/template-styles/about.scss
@@ -33,7 +33,7 @@
       "work__img support__btn " ;
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 1100px) {
        grid-template-areas:
       "description__main description__main"
       "about__img about__img"
@@ -118,7 +118,10 @@
     margin: 0;
     }
   
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 900px) {
+    padding-bottom: 100%;
+    } 
+  @media screen and (min-width: 1000px) {
      padding-bottom: 80%;
     }
     
@@ -136,12 +139,6 @@
   height: 100%;
   
   @media screen and (min-width: $tablet) {
-    max-width: 455px;
-    min-height: 370px;
-    }
-
-  @media screen and (min-width: 1200px) {
-    max-width: 575px;
     min-height: 370px;
     }
 
@@ -320,13 +317,12 @@
       margin: 0 0 20px 0;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1100px) {
       display: block;
       margin-top: 0px;
     }
 
     @media screen and (min-width: $desktop) {
-      display: block;
       margin-top: 4px;
       margin-bottom: 0px;
     }
