--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -248,7 +248,7 @@
 .about__wraper {
   @media screen and (min-width: $tablet) {
     position: relative;
-    padding-bottom: 56px;
+    padding-bottom: 24px;
   }
   @media screen and (min-width: $desktop) {
     padding-bottom: 0;
@@ -355,8 +355,8 @@
 .custom-pagination {
   @media screen and (min-width: $tablet) {
     position: absolute;
-    bottom: 18px;
-    left: 70px;
+    bottom: 6px;
+    left: 48px;
     font-size: 18px;
     font-weight: 500;
     line-height: 1.3;
@@ -384,7 +384,7 @@
       transform: scale(1.1);
     }
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $desktop) {
     width: 56px;
     height: 56px;
   }
@@ -399,7 +399,7 @@
 
 .swiper-slide {
   @media screen and (min-width: $tablet) {
-    width: 80%;
+    width: 82.5%;
   }
   @media screen and (min-width: $desktop) {
     width: 90%;
