--- a/src/styles/template-parts-styles/founding-documents.scss
+++ b/src/styles/template-parts-styles/founding-documents.scss
@@ -49,12 +49,10 @@
 		justify-items: center;
 	}
 
-	@media screen and (min-width: $desktop) {
+	@media screen and (min-width: 1000px) {
 		display: flex;
 		gap: 0px;
-		justify-content: space-between;
-		padding-right: 80px;
-		padding-left: 20px;
+		justify-content: space-evenly;
 	}
 
 	@media screen and (min-width: 1920px) {
@@ -107,7 +105,7 @@
 	@media screen and (min-width: $tablet) {
 		display: block;
 		width: 195px;
-		height: 250px;
+		height: 235px;
 	}
 
 	@media screen and (min-width: $desktop) {
