--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -809,13 +809,12 @@
 .bank-details__text-second {
   margin-bottom: 24px;
   color: $black;
-  font-size: 18px;
+  font-size: calc(16px + (2 + 2 * 0.7) * ((100vw - 320px) / 768));
   font-weight: 400;
   line-height: auto;
 
-  @media screen and (max-width: 380px) {
+  @media screen and (max-width: $mobile) {
     margin-bottom: 48px;
-    font-size: 17px;
     letter-spacing: -0.05em;
   }
 
