--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,8 +8,11 @@
   }
 
   @media screen and (min-width: $desktop) {
-    max-width: $desktop;
     padding: 0 75px;
+  }
+
+  @media screen and (min-width: $full) {
+    max-width: $full;
   }
 }
 
