--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,19 +5,21 @@
 
   @media screen and (min-width: $tablet) {
     padding: 0 40px;
+    max-width: $desktop;
   }
 
   @media screen and (min-width: $desktop) {
     padding: 0 75px;
+    max-width: $full;
   }
 
   @media screen and (min-width: $full) {
-    max-width: $full;
+    max-width: 1920px;
+    padding: 0 80px;
   }
 }
 
 .button {
-  width: 100%;
   padding: 14px 0;
   color: $white;
   background-color: $main-blue;
@@ -32,7 +34,7 @@
     box-shadow $transition-function;
 
   @media screen and (min-width: $mobile) {
-    width: 311px;
+    min-width: 311px;
   }
 
   &:hover,
