--- a/src/styles/template-parts-styles/breadcrumbs.scss
+++ b/src/styles/template-parts-styles/breadcrumbs.scss
@@ -1,21 +1,26 @@
 @import "../variables.scss";
 
 .breadcrumbs {
-  padding-top: 16px;
-  padding-bottom: 23px;
-  @media screen and (min-width: $tablet) {
-    padding-bottom: 24px;
-  }
-  @media screen and (min-width: $desktop) {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  @media screen and (max-width: $full) {
     padding-top: 25px;
     padding-bottom: 32px;
+  }
+  @media screen and (max-width: $desktop) {
+    padding-top: 16px;
+    padding-bottom: 24px;
+  }
+  @media screen and (max-width: $tablet) {
+    padding-bottom: 23px;
   }
 }
 
 .breadcrumbs span {
   color: $grey;
   line-height: 1;
-  @media screen and (min-width: $tablet) {
+  font-size: 24px;
+  @media screen and (max-width: 1680px) {
     font-size: 14px;
   }
 }
