--- a/src/styles/template-styles/helpform.scss
+++ b/src/styles/template-styles/helpform.scss
@@ -65,11 +65,16 @@
 
 //helpform grid
 .helpform .form__wrapper {
-  @media screen and (min-width: 1200px) {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  row-gap: 56px;
+  @media screen and (max-width: $full) {
     column-gap: 30px;
     row-gap: 40px;
+  }
+  @media screen and (max-width: $desktop) {
+    display: block;
   }
 }
 
@@ -79,7 +84,7 @@
 
 //form fields
 .input__wrap {
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: $desktop) {
     margin-bottom: 28px;
   }
   @media screen and (max-width: $tablet) {
@@ -91,13 +96,19 @@
   display: inline-block;
   color: $grey;
   font-weight: 500;
+  font-size: 24px;
   line-height: 1;
   margin-bottom: 12px;
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: $full) {
+    font-size: 16px;
+  }
+  @media screen and (max-width: $desktop) {
     margin-bottom: 10px;
+    font-size: 14px;
   }
   @media screen and (max-width: $tablet) {
     margin-bottom: 12px;
+    font-size: 16px;
   }
 }
 
@@ -105,12 +116,15 @@ input.contact__input,
 textarea.contact__input {
   padding: 16px 18px;
   width: 100%;
-  color: $grey;
-  font-size: 14px;
+  color: $black;
+  font-size: 20px;
   line-height: 1;
   border: 1px solid #d6d6d6;
   border-radius: $btn-border-radius;
   background-color: $white;
+  @media screen and (max-width: $full) {
+    font-size: 14px;
+  }
 }
 
 textarea.contact__input {
@@ -120,24 +134,31 @@ textarea.contact__input {
 input.contact__input::placeholder,
 textarea.contact__input::placeholder {
   color: $grey;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1;
+  @media screen and (max-width: $full) {
+    font-size: 14px;
+  }
 }
 
 // check button
 .check__wrap {
   color: $grey;
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 1;
-  margin-top: 16px;
-  @media screen and (min-width: $tablet) {
+  margin: 20px 0 60px;
+  @media screen and (max-width: $full) {
+    margin-bottom: 40px;
+    font-size: 16px;
+  }
+  @media screen and (max-width: $desktop) {
     margin: 18px 0 33px;
     font-size: 14px;
   }
-  @media screen and (min-width: 1200px) {
-    margin: 20px 0 40px;
-    font-size: 16px;
+  @media screen and (max-width: $tablet) {
+    margin-top: 16px;
+    font-size: 12px;
   }
 }
 .check__wrap label {
@@ -151,23 +172,31 @@ textarea.contact__input::placeholder {
 
 .contactAccept {
   appearance: none;
-  width: 14px;
-  height: 14px;
-  border: 1px solid #c8c7c7;
-  border-radius: 3px;
-  margin-right: 5px;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #c8c7c7;
+  border-radius: 5px;
+  margin-right: 12px;
   transition: $transition-function;
-  @media screen and (min-width: $tablet) {
-    width: 18px;
-    height: 18px;
-    border-radius: 5px;
-    border-width: 2px;
-  }
-  @media screen and (min-width: 1200px) {
+  @media screen and (max-width: $full) {
     width: 20px;
     height: 20px;
     border-radius: 3px;
+    margin-right: 9px;
   }
+  @media screen and (max-width: $desktop) {
+    width: 18px;
+    height: 18px;
+    border-radius: 5px;
+    margin-right: 8px;
+  }
+  @media screen and (max-width: $tablet) {
+    width: 14px;
+    height: 14px;
+    border-width: 1px;
+    margin-right: 5px;
+  }
+
   &:checked {
     background-image: url(../../../assets/images/check.svg);
     background-repeat: no-repeat;
@@ -182,31 +211,24 @@ textarea.contact__input::placeholder {
 }
 
 //form button
-.helpform-btn__wrap {
-  margin-top: 32px;
-  @media screen and (min-width: 1200px) {
-    margin-top: 0;
-  }
-}
-
 .helpform-btn__wrap .helpform__button {
-  cursor: pointer;
-  display: flex;
   width: 100%;
-  padding: 14px 32px;
-  justify-content: center;
-  align-items: center;
-  border-radius: $btn-border-radius;
-  background: $main-blue;
-  color: $white;
-  font-size: 20px;
-  font-weight: 500;
+  background: $yellow;
+  color: $main-blue;
+  font-size: 23px;
+  padding: 26px 56px;
   transition: $transition-function;
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: $full) {
+    padding: 14px 32px;
+    background: $main-blue;
+    color: $white;
+    font-size: 24px;
+  }
+  @media screen and (max-width: $desktop) {
     font-size: 16px;
   }
-  @media screen and (min-width: 1200px) {
-    font-size: 24px;
+  @media screen and (max-width: $tablet) {
+    font-size: 20px;
   }
 
   &:hover,
@@ -217,6 +239,7 @@ textarea.contact__input::placeholder {
 
 .wpcf7 .wpcf7-submit:disabled {
   background: $grey;
+  color: $white;
   &:hover,
   &:focus {
     border-color: $grey;
@@ -226,9 +249,12 @@ textarea.contact__input::placeholder {
 }
 
 .required {
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 500;
   color: #dc3232;
+  @media screen and (max-width: $full) {
+    font-size: 16px;
+  }
 }
 
 //notification
@@ -237,52 +263,63 @@ textarea.contact__input::placeholder {
   top: 20px;
   right: -1000px;
   z-index: 10;
-  padding: 46px 36px;
+  padding: 97px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: fit-content;
-  border-radius: 12px;
+  border-radius: 30px;
   border: 2px solid $main-blue;
   background: $white;
   box-shadow: 0px 12px 12px 0px rgba(82, 113, 255, 0.04);
   opacity: 0;
   transition: $transition-function;
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: 1500px) {
+    padding: 67px 133px;
+    border-radius: 30px;
+  }
+  @media screen and (max-width: $desktop) {
     padding: 56px 83px;
     border-radius: 24px;
   }
-  @media screen and (min-width: 1200px) {
-    padding: 67px 133px;
-    border-radius: 30px;
+  @media screen and (max-width: $tablet) {
+    padding: 46px 36px;
+    border-radius: 12px;
   }
 }
 
 .notification.active {
   opacity: 1;
   transform: translate(0, 0);
-  right: 0;
-  @media screen and (min-width: 400px) {
-    right: 16px;
+  right: 80px;
+  @media screen and (max-width: 1500px) {
+    right: 75px;
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: $desktop) {
     right: 40px;
   }
-  @media screen and (min-width: $desktop) {
-    right: 75px;
+  @media screen and (max-width: 680px) {
+    right: 16px;
+  }
+  @media screen and (max-width: 400px) {
+    right: 0;
   }
 }
 
 .notification__image {
-  width: 67px;
-  margin-right: 10px;
-  @media screen and (min-width: $tablet) {
+  width: 150px;
+  margin-right: 32px;
+  @media screen and (max-width: 1500px) {
+    width: 123px;
+    margin-right: 24px;
+  }
+  @media screen and (max-width: $desktop) {
     width: 89px;
     margin-right: 18px;
   }
-  @media screen and (min-width: 1200px) {
-    width: 123px;
-    margin-right: 24px;
+  @media screen and (max-width: $tablet) {
+    width: 67px;
+    margin-right: 10px;
   }
 }
 
@@ -294,15 +331,15 @@ textarea.contact__input::placeholder {
   position: absolute;
   fill: $black;
   transition: fill $transition-function;
-  top: 12px;
-  right: 12px;
-  @media screen and (min-width: $tablet) {
+  top: 22px;
+  right: 22px;
+  @media screen and (max-width: $desktop) {
     top: 18px;
     right: 18px;
   }
-  @media screen and (min-width: 1200px) {
-    top: 22px;
-    right: 22px;
+  @media screen and (max-width: $tablet) {
+    top: 12px;
+    right: 12px;
   }
   &:hover,
   &:focus {
@@ -311,33 +348,30 @@ textarea.contact__input::placeholder {
 }
 
 .notification__btn .menu-icon {
-  width: 22px;
-  height: 22px;
-  top: 12px;
-  right: 12px;
-  @media screen and (min-width: $tablet) {
+  width: 36px;
+  height: 36px;
+  @media screen and (max-width: $desktop) {
     width: 24px;
     height: 24px;
-    top: 18px;
-    right: 18px;
   }
-  @media screen and (min-width: 1200px) {
-    width: 36px;
-    border-radius: 36px;
-    top: 22px;
-    right: 22px;
+  @media screen and (max-width: $tablet) {
+    width: 22px;
+    height: 22px;
   }
 }
 
 .notification__text {
-  font-size: 18px;
+  font-size: 40px;
   font-weight: 500;
   text-align: center;
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: 1500px) {
+    font-size: 32px;
+  }
+  @media screen and (max-width: $desktop) {
     font-size: 24px;
   }
-  @media screen and (min-width: 1200px) {
-    font-size: 32px;
+  @media screen and (max-width: $tablet) {
+    font-size: 18px;
   }
 }
 
