--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,16 +1,16 @@
 .background-404 {
   position: fixed;
-  top: -50%;
-  left: -50%;
-  width: 200%;
-  height: 200%;
-  @media screen and (min-width: 1200px) {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  @media screen and (max-width: $desktop) {
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
   }
 }
 
@@ -21,11 +21,11 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  min-width: 50%;
-  min-height: 50%;
-  @media screen and (min-width: 1200px) {
-    min-width: 100%;
-    min-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  @media screen and (max-width: $desktop) {
+    min-width: 50%;
+    min-height: 50%;
   }
 }
 
@@ -43,51 +43,59 @@
 .error-text {
   font-weight: 500;
   margin: 0;
-  @media screen and (min-width: $tablet) {
+  font-size: 34px;
+  @media screen and (max-width: $full) {
+    font-size: 28px;
+  }
+  @media screen and (max-width: $tablet) {
     font-size: 24px;
   }
-  @media screen and (min-width: 1200px) {
-    font-size: 28px;
+  @media screen and (max-width: $tablet) {
+    font-size: 22px;
   }
 }
 
 .error-oops {
-  font-size: 100px;
+  font-size: 272px;
   font-weight: 900;
   line-height: 1;
-  letter-spacing: 16.8px;
-  margin: 18px 0 35px;
-  @media screen and (min-width: $tablet) {
-    font-size: 140px;
-    margin: 12px 0 55px;
-  }
-  @media screen and (min-width: 1200px) {
+  letter-spacing: 32.6px;
+  margin-bottom: 116px;
+  @media screen and (max-width: $full) {
     font-size: 227px;
-    line-height: 1;
     letter-spacing: 27.24px;
     margin: 8px 0 86px;
+  }
+  @media screen and (max-width: $desktop) {
+    font-size: 140px;
+    letter-spacing: 16.8px;
+    margin: 12px 0 55px;
+  }
+  @media screen and (max-width: $tablet) {
+    font-size: 100px;
+    letter-spacing: 12px;
+    margin: 18px 0 35px;
   }
 }
 
 .error-button {
-  display: inline-block;
   padding: 26px 56px;
   text-align: center;
   width: fit-content;
   background-color: transparent;
-  border-radius: 6px;
   border: 2px solid $white;
   color: $white;
-  font-size: 14px;
-  font-weight: 500;
+  font-size: 26px;
   transition: $transition-function;
-
-  @media screen and (min-width: $tablet) {
+  @media screen and (max-width: $full) {
+    font-size: 24px;
+  }
+  @media screen and (max-width: $desktop) {
     font-size: 18px;
   }
-
-  @media screen and (min-width: 1200px) {
-    font-size: 24px;
+  @media screen and (max-width: $tablet) {
+    border-radius: 6px;
+    font-size: 14px;
   }
 
   &:hover,
