--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -198,14 +198,14 @@
   color: $main-blue;
 }
 
-.menu-item:last-child {
+header .menu-item:last-child {
   display: none;
   @media screen and (max-width: 1200px) {
     display: block;
   }
 }
 
-.menu-item:not(:last-child) {
+header .menu-item:not(:last-child) {
   margin-bottom: 0;
   @media screen and (max-width: 1200px) {
     margin-bottom: 44px;
@@ -215,7 +215,7 @@
   }
 }
 
-.menu-item:not(:first-child) {
+header .menu-item:not(:first-child) {
   margin-left: 48px;
   @media screen and (max-width: $full) {
     margin-left: 30px;
