--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -143,7 +143,8 @@ footer img.footer__logo {
   }
 }
 
-.contacts__flex a {
+.contacts__flex a,
+.footer__phone span {
   font-size: 22px;
   @media screen and (max-width: $full) {
     font-size: 16px;
