--- a/src/styles/template-parts-styles/post-file.scss
+++ b/src/styles/template-parts-styles/post-file.scss
@@ -3,17 +3,20 @@
 .post-box {
   padding: 24px 16px;
   box-shadow: 0px 4px 11px 0px rgba(137, 137, 137, 0.25);
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: flex;
     padding: 0;
     height: 343px;
     max-width: fit-content;
   }
+  @media screen and (min-width: $full) {
+    height: 568px;
+  }
 }
 
 .post-box:not(:last-child) {
   margin-bottom: 32px;
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 40px;
   }
   @media screen and (min-width: $desktop) {
@@ -29,7 +32,7 @@
     height: 0;
     padding-bottom: 110%;
   }
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,6 +41,9 @@
   }
   @media screen and (min-width: 1200px) {
     width: 342px;
+  }
+  @media screen and (min-width: $full) {
+    width: 573px;
   }
 }
 
@@ -57,7 +63,7 @@
 }
 
 .description {
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     padding: 20px 20px 0 24px;
     width: 356px;
   }
@@ -65,17 +71,25 @@
     padding: 24px 64px 0;
     width: 618px;
   }
+  @media screen and (min-width: $full) {
+    padding: 64px;
+    width: 910px;
+  }
 }
 
 .entry-date {
   color: $grey;
   margin-bottom: 16px;
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     font-size: 18px;
     margin-bottom: 12px;
   }
   @media screen and (min-width: 1200px) {
     margin-bottom: 16px;
+  }
+  @media screen and (min-width: $full) {
+    margin-bottom: 18px;
+    font-size: 22px;
   }
 }
 
@@ -83,32 +97,40 @@
   font-size: 20px;
   font-weight: 500;
   margin-bottom: 16px;
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     margin-bottom: 24px;
   }
   @media screen and (min-width: 1200px) {
     font-size: 22px;
   }
+  @media screen and (min-width: $full) {
+    font-size: 28px;
+  }
+}
+
+.post-content {
+  @media screen and (min-width: $full) {
+    font-size: 26px;
+    width: 673px;
+  }
 }
 
 .details-btn {
-  display: flex;
   width: 100%;
-  padding: 14px 32px;
-  justify-content: center;
-  align-items: center;
-  border-radius: $btn-border-radius;
-  border: 1px solid $main-blue;
+  border-color: $main-blue;
   background-color: $white;
   color: $main-blue;
   margin-top: 32px;
-  transition: $transition-function;
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: 768px) {
     width: fit-content;
     margin-top: 24px;
   }
   @media screen and (min-width: 1200px) {
     margin-top: 32px;
+  }
+  @media screen and (min-width: $full) {
+    padding: 26px 56px;
+    font-size: 23px;
   }
 
   &:hover,
