--- a/src/styles/template-styles/home.scss
+++ b/src/styles/template-styles/home.scss
@@ -296,8 +296,11 @@
     padding-right: 0;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     padding: 0;
+  }
+  @media screen and (min-width: 1600px) {
+    padding-right: 80px;
   }
 }
 
@@ -319,7 +322,11 @@
     margin-bottom: 56px;
     font-size: 40px;
     line-height: auto;
-    padding: 0 75px;
+    padding-right: 75px;
+  }
+  @media screen and (min-width: 1440px) {
+    padding: 0 80px;
+    font-size: 56px;
   }
 }
 
@@ -327,10 +334,13 @@
   @media screen and (min-width: $tablet) {
     position: relative;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     display: grid;
     grid-template-columns: 1fr 1.2fr;
     column-gap: 140px;
+  }
+  @media screen and (min-width: 1600px) {
+    column-gap: 126px;
   }
 }
 
@@ -362,9 +372,18 @@
   }
   @media screen and (min-width: $desktop) {
     font-size: 18px;
-    margin-bottom: 0;
-    padding-left: 75px;
+    padding-right: 75px;
+  }
+  @media screen and (min-width: $full) {
     padding-right: 0;
+    padding-left: 80px;
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: 1600px) {
+    font-size: 22px;
+  }
+  @media screen and (min-width: 1880px) {
+    font-size: 26px;
   }
 }
 
@@ -388,9 +407,13 @@
     max-height: 466px;
   }
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     padding-bottom: 70%;
     max-height: 490px;
+  }
+  @media screen and (min-width: 1600px) {
+    padding-bottom: 77%;
+    max-height: 671px;
   }
 
   img {
@@ -417,11 +440,14 @@
     gap: 62px;
     margin-top: 24px;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     position: absolute;
     bottom: 0;
     left: 75px;
     margin-top: 0;
+  }
+  @media screen and (min-width: 1600px) {
+    gap: 98px;
   }
 }
 .custom-pagination {
@@ -433,9 +459,14 @@
     font-weight: 500;
     line-height: 1.3;
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     bottom: 18px;
     left: 145px;
+  }
+  @media screen and (min-width: 1600px) {
+    font-size: 32px;
+    bottom: 16px;
+    left: 168px;
   }
 }
 .custom-next-icon,
@@ -456,9 +487,13 @@
       transform: scale(1.1);
     }
   }
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: 1440px) {
     width: 56px;
     height: 56px;
+  }
+  @media screen and (min-width: 1600px) {
+    width: 72px;
+    height: 72px;
   }
 }
 .custom-next-icon {
@@ -475,6 +510,9 @@
   }
   @media screen and (min-width: $desktop) {
     width: 90%;
+  }
+  @media screen and (min-width: 1600px) {
+    width: 100%;
   }
 }
 
